feat: created CardInput, TodoItemsContainer and TodoItem components, added styles

--- a/src/styles/UI/card-button.css
+++ b/src/styles/UI/card-button.css
@@ -1,14 +1,8 @@
-.card-button-container {
-  position: absolute;
-  margin: 0;
-  left: 50%;
-  transform: translate(-50%, -50%);
-}
-
 .card-button {
   display: block;
   height: 60px;
   width: 60px;
+  margin-top: 30px;
   border-radius: 50%;
   background-color: rgb(167, 233, 187);
   border: none;
