--- a/src/styles/UI/add-todo-input.css
+++ b/src/styles/UI/add-todo-input.css
@@ -1,4 +1,4 @@
-.card-input {
+.add-todo-input {
   height: 40px;
   width: 100%;
   margin: 20px 0;
@@ -13,6 +13,10 @@ input {
 
 input:focus {
   outline: none;
+}
+
+input:focus::placeholder {
+  opacity: 0;
 }
 
 input:hover {
