--- a/src/styles/UI/todo-item.css
+++ b/src/styles/UI/todo-item.css
@@ -1,8 +1,23 @@
 .todo-item {
   display: flex;
+  justify-content: space-between;
   align-items: center;
   height: 40px;
   width: 100%;
   margin-bottom: 20px;
   border-bottom: 1px solid rgb(113, 224, 147);
+}
+
+button {
+  background: none;
+  border: none;
+}
+
+button:hover {
+  cursor: pointer;
+}
+
+.delete-icon {
+  width: 20px;
+  height: 20px;
 }
