--- a/src/components/card/card.css
+++ b/src/components/card/card.css
@@ -1,7 +1,7 @@
 .card {
   background-color: #fff;
   width: 500px;
-  height: 800px;
+  min-height: 800px;
   margin: 0;
   padding: 40px;
   position: absolute;
