--- a/src/components/todo-item/todo-item.css
+++ b/src/components/todo-item/todo-item.css
@@ -8,6 +8,10 @@
   border-bottom: 1px solid rgb(113, 224, 147);
 }
 
+.complete {
+  text-decoration: line-through;
+}
+
 button {
   background: none;
   border: none;
