feat: adjusted TodoItemsContainer component to show an image when no todo items are added

--- a/src/components/todo-item/todo-items-container/todo-items-container.css
+++ b/src/components/todo-item/todo-items-container/todo-items-container.css
@@ -1,3 +1,12 @@
 .todo-items-container {
   margin-top: 70px;
 }
+
+.empty { 
+  display: flex;
+  justify-content: center;
+}
+
+img {
+  width: 100%;
+}
