--- a/src/components/modal/modal.css
+++ b/src/components/modal/modal.css
@@ -1,11 +1,15 @@
 .modal {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
   display: flex;
   flex-direction: column;
-  z-index: 10;
+  z-index: 1000;
   width: 450px;
   padding: 8px;
   border-radius: 4px;
-  border: 1px solid black;
+  background-color: #f0ecde;
 }
 
 .input-container { 
@@ -22,8 +26,7 @@
   border: none;
   border-radius: 4px;
   padding: 5px;
-  background-color: rgb(235, 247, 239);
-  /* border-bottom: 1px solid rgb(113, 224, 147); */
+  background-color: #fff;
 }
 
 #edit-input:focus::placeholder {
