--- a/src/components/modal/modal.css
+++ b/src/components/modal/modal.css
@@ -6,7 +6,7 @@
   display: flex;
   flex-direction: column;
   z-index: 1000;
-  width: 450px;
+  width: 480px;
   padding: 8px;
   border-radius: 4px;
   background-color: #f0ecde;
@@ -16,13 +16,18 @@
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  margin-top: 6px;
-  margin-bottom: 6px;
+  margin-top: 8px;
+  margin-bottom: 8px;
+}
+
+.label-container {
+  display: flex;
+  justify-content: space-between;
 }
 
 #edit-input {
   height: 40px;
-  width: 100%;
+  width: 80%;
   border: none;
   border-radius: 4px;
   padding: 5px;
@@ -38,6 +43,7 @@
 }
 
 .edit-button {
+  width: 20%;
   border-radius: 4px;
   background-color: rgb(167, 233, 187);
   transition: 0.3s ease-in-out;
@@ -46,4 +52,9 @@
 .edit-button:hover {
   cursor: pointer;
   background-color: rgb(113, 224, 147);
+}
+
+.close-icon {
+  width: 12px;
+  height: 12px;
 }
