--- a/src/components/modal/modal.css
+++ b/src/components/modal/modal.css
@@ -1,57 +1,42 @@
 .modal {
   position: fixed;
-  top: 50%;
+  top: 16%;
   left: 50%;
   transform: translate(-50%, -50%);
   display: flex;
   flex-direction: column;
   z-index: 1000;
   width: 480px;
-  padding: 8px;
   border-radius: 4px;
   background-color: #f0ecde;
+  box-shadow: 2px 6px 6px 2px rgb(221, 220, 220);
 }
 
-.input-container { 
+.top {
   display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  margin-top: 8px;
-  margin-bottom: 8px;
+  justify-content: center;
+  align-items: center;
+  height: 70px;
+  padding: 0;
+  background-color: rgb(232, 0, 0);
+  border-radius: 4px 4px 0 0 ;
 }
 
-.label-container {
+.error-icon {
+  height: 50px;
+  width: 50px;
+  border: 2px solid #fff;
+  border-radius: 50%;
+}
+
+.bottom {
   display: flex;
   justify-content: space-between;
-}
-
-#edit-input {
-  height: 40px;
-  width: 80%;
-  border: none;
-  border-radius: 4px;
-  padding: 5px;
+  align-items: center;
+  height: 60px;
+  padding: 8px;
+  font-size: 16px;
   background-color: #fff;
-}
-
-#edit-input:focus::placeholder {
-  opacity: 0;
-}
-
-#edit-input:focus {
-  outline: none;
-}
-
-.edit-button {
-  width: 20%;
-  border-radius: 4px;
-  background-color: rgb(167, 233, 187);
-  transition: 0.3s ease-in-out;
-}
-
-.edit-button:hover {
-  cursor: pointer;
-  background-color: rgb(113, 224, 147);
 }
 
 .close-icon {
